--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <h1>Spend Elon Musk's Fortune!</h1>
         <p>
           If Elon cashed out all of his stocks & assets today he would have<br />
-          approximately <b>$217,000,000,000</b> (US Dollars) in his bank
+          approximately <b class="total-money"></b> (US Dollars) in his bank
           account.
         </p>
         <p>¿What would you <b>spend it</b> on?</p>
         <p>¡Have your receipt at the end!</p>
       </div>
       <nav class="nav">
-        <h3>Remaining: 216,998,200,000 USD</h3>
-        <h3>You only spent 0.000829 % of the total!</h3>
+        <h3>Remaining: <span class="remaining-money"></span> USD</h3>
+        <h3>You only spent <span class="percentage-spent"></span> of the total!</h3>
       </nav>
       <div id="main" class="main">
         <!-- ////// -->
