--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <nav class="nav">
         <h3>Remaining: <span class="remaining-money"></span> USD</h3>
-        <h3>You only spent <span class="percentage-spent"></span> of the total!</h3>
+        <h3>You only spent <span class="percentage-spent"></span>% of the total!</h3>
       </nav>
       <div id="main" class="main">
         <!-- ////// -->
